# src/main/java/de/fzi/efeu/api/GetInitialChargingOrdersApi.java
@@ -1,0 +1,67 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (4.3.1).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package de.fzi.efeu.api;
+
+import de.fzi.efeu.model.ChargingOrder;
+import io.swagger.annotations.*;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.CookieValue;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2020-08-12T13:07:36.908610100+02:00[Europe/Berlin]")
+
+@Validated
+@Api(value = "getInitialChargingOrders", description = "the getInitialChargingOrders API")
+public interface GetInitialChargingOrdersApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    /**
+     * GET /getInitialChargingOrders/ : get initial recharging order for the day
+     *
+     * @return Success (status code 200)
+     *         or Failure (status code 400)
+     */
+    @ApiOperation(value = "get initial recharging order for the day", nickname = "getInitialChargingOrders", notes = "", response = ChargingOrder.class, tags={ "Recharging Scheduling", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Success", response = ChargingOrder.class),
+        @ApiResponse(code = 400, message = "Failure") })
+    @RequestMapping(value = "/getInitialChargingOrders/",
+        produces = { "application/json" }, 
+        method = RequestMethod.GET)
+    default ResponseEntity<ChargingOrder> getInitialChargingOrders() {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"charging station Id\" : \"charging station Id\", \"connection_time\" : \"2000-01-23T04:56:07.000+00:00\", \"vehicleId\" : \"vehicleId\", \"disconnection_time\" : \"2000-01-23T04:56:07.000+00:00\" }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+}
